--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -25,10 +25,15 @@
     background-color: var(--color-grey-dark-1);
 
     flex:0 0 18%;//grow shrink base
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view {
     background-color: #fff;
     background-color: orangered;
+    height: 80rem;
     flex:1;
 }
