--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -33,6 +33,28 @@
 
 .hotel-view {
     background-color: #fff;
-    height: 80rem;
     flex:1;
+}
+
+.detail {
+    font-size: 1.4rem;
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    background-color: white;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex:0 0 60%;
+    margin-right: 4.5rem;
+}
+
+.user-reviews {
+    display: flex;
+    flex:1;
+    flex-direction: column;
+    align-items: center;
 }
